# jenkins_census_analysis

./: censusParse.cabal  censusParse.hs  get_data.sh
